--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,7 @@
 @use "./settings";
+@use "./pages/home";
 @use "./components/header";
 @use "./components/picture";
+@use "./components/experiences";
+@use "./components/asides";
+@use "./components/footer";
