--- a/src/styles/components/_picture.scss
+++ b/src/styles/components/_picture.scss
@@ -1,3 +1,5 @@
+@use "../settings";
+
 .picture-container {
     width: 205px;
     text-align: center;
@@ -6,7 +8,7 @@
 
 .portrait {
     overflow: hidden;
-    border: 2px solid black;
+    border: 2px solid settings.$color-2;
     border-radius: 50%;
     width: 200px;
     height: 200px;
