--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -5,7 +5,7 @@
     margin-top: 100px;
     padding-left: 20px;
 }
-
+  
 .articles {
     display: flex;
     flex-direction: column;
@@ -13,6 +13,34 @@
     width: 60rem;
     li {
         margin-left: 22px;
+        opacity: 0;
+        transform: translateX(-20px);
+        animation: appear 0.5s ease-in-out forwards;
+    }
+    ul {
+        padding: 0;
+    }
+    
+    ul li:nth-child(1) {
+    animation-delay: 0s;
+    }
+    ul li:nth-child(2) {
+        animation-delay: 0.1s;
+    }
+    ul li:nth-child(3) {
+        animation-delay: 0.2s;
+    }
+    ul li:nth-child(4) {
+        animation-delay: 0.3s;
+    }
+    ul li:nth-child(5) {
+        animation-delay: 0.4s;
+    }
+    ul li:nth-child(6) {
+        animation-delay: 0.5s;
+    }
+    ul li:nth-child(7) {
+        animation-delay: 0.6s;
     }
 }
 
