--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,12 +2,13 @@
 
 footer {
     position: absolute;
+    display: flex;
+    justify-content: center;
     background-color: settings.$color-3;
     bottom: 0;
     left: 0;
     width: 100%;
-    h1 {
+    h2 {
         color: white;
-        padding-left: 120px;
     }
 }
