--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -34,19 +34,8 @@
           bottom: 0px;
           left: 50%;
           transform: translateX(-50%);
-          -webkit-animation: anim 0.3s ease forwards;
-          animation: anim 0.6s ease forwards;
-  
-          @-webkit-keyframes anim {
-            to {
-              width: 100%;
-            }
-          }
-          @keyframes anim {
-            to {
-              width: 100%;
-            }
-          }
+          -webkit-animation: nav-anim 0.3s ease forwards;
+          animation: nav-anim 0.6s ease forwards;
         }
       }
     }
