--- a/src/styles/components/_picture.scss
+++ b/src/styles/components/_picture.scss
@@ -8,7 +8,7 @@
 
 .portrait {
     overflow: hidden;
-    border: 2px solid settings.$color-2;
+    border: 4px solid settings.$color-2;
     border-radius: 50%;
     width: 200px;
     height: 200px;
@@ -16,4 +16,9 @@
 
 .photo {
     height: 200px;
+}
+
+.slide-in-right {
+	-webkit-animation: slide-in-right 1.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-in-right 1.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
