--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,10 @@
 @use "./settings";
 @use "./pages/home";
+@use "./pages/projects";
 @use "./components/header";
 @use "./components/navigation";
 @use "./components/picture";
+@use "./components/card";
 @use "./components/experiences";
 @use "./components/asides";
 @use "./components/footer";
