--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,4 +1,5 @@
 @use "../settings";
+@use "../utils/mixin";
 
 footer {
     position: absolute;
@@ -8,6 +9,9 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
+    @include mixin.laptop {
+        margin-bottom: -80px;
+    }
     h2 {
         color: white;
     }
