--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,4 +1,5 @@
 @use "../settings";
+@use "../utils/mixin";
 
 header {
     display: flex;
@@ -10,6 +11,13 @@ header {
     height: 12rem;
     border-radius: 25px;
     color: white;
+    @include mixin.desktop {
+        width: 60rem;
+    }
+    @include mixin.laptop {
+        width: 88.5%;
+        margin-left: 20px;
+    }
     li {
         font-size: 26px;
         list-style-type: none;
