--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,9 +1,17 @@
 @use "../settings";
+@use "../utils/mixin";
 
 .intro {
     width: 90rem;
     margin-top: 100px;
     padding-left: 20px;
+    @include mixin.desktop {
+        width: 60rem;
+    }
+    @include mixin.laptop {
+        width: 90%;
+        margin-left: 20px;
+    }
 }
 
 .animated-text {
@@ -16,6 +24,13 @@
     flex-direction: column;
     justify-content: flex-end;
     width: 60rem;
+    @include mixin.desktop {
+        width: 30rem;
+    }
+    @include mixin.laptop {
+        width: 95%;
+        margin-left: 20px;
+    }
     li {
         margin-left: 22px;
         opacity: 0;
@@ -54,6 +69,9 @@
     flex-direction: row-reverse;
     justify-content: space-between;
     padding-top: 70px;
+    @include mixin.laptop {
+        flex-direction: column;
+    }
 }
 
 .block-color {
