--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -12,6 +12,9 @@ footer {
     @include mixin.laptop {
         margin-bottom: -80px;
     }
+    @include mixin.mobile {
+        width: 100vw;
+    }
     h2 {
         color: white;
     }
