--- a/src/styles/components/_picture.scss
+++ b/src/styles/components/_picture.scss
@@ -1,24 +1,47 @@
 @use "../settings";
+@use "../utils/mixin";
 
 .picture-container {
+    position: relative;
     width: 205px;
     text-align: center;
     margin-right: 50px;
+    @include mixin.mobile {
+        width: 30%; 
+        margin-right: 0px;
+    }
+    h1 {
+        @include mixin.mobile {
+            font-size: 30x;
+            padding-left: 15px;
+            margin-top: 13px;
+        }
+    }
 }
 
 .portrait {
+    position: absolute;
     overflow: hidden;
-    border: 4px solid settings.$color-2;
+    border: 2px solid settings.$color-2;
     border-radius: 50%;
     width: 200px;
     height: 200px;
+    @include mixin.mobile{
+        display: none;
+    }
 }
 
 .photo {
     height: 200px;
+    @include mixin.mobile{
+        display: none;
+    }
 }
 
 .slide-in-right {
 	-webkit-animation: slide-in-right 1.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     animation: slide-in-right 1.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    @include mixin.mobile {
+        display: none; 
+    }
 }
