--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -13,7 +13,8 @@
         margin-left: 20px;
     }
     @include mixin.mobile {
-        padding-left: 15px;
+        padding-left: 5px;
+        padding-right: 5px;
         margin-left: 0;
         margin-top: 0;
         text-align: center;
