--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,7 +4,7 @@
 header {
     display: flex;
     justify-content: space-between;
-    box-shadow: 5px 5px 2px settings.$color-4;
+    box-shadow: 5px 5px 2px settings.$color-2;
     background-color: settings.$color-3;
     padding: 0px 20px 20px 20px;
     width: 90rem;
@@ -42,6 +42,7 @@ header {
 }
 
 .title h1 {
+    color: settings.$color-1;
     padding-bottom: 20px;
     border-bottom: 2px solid white;
 }
