--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,104 +1,32 @@
 @use "../settings";
-@use "../utils/mixin";
 
-.intro {
-    width: 90rem;
-    margin-top: 100px;
-    padding-left: 20px;
-    @include mixin.desktop {
-        width: 60rem;
-    }
-    @include mixin.laptop {
-        width: 90%;
-        margin-left: 20px;
-    }
-    @include mixin.mobile {
-        padding-left: 5px;
-        padding-right: 5px;
-        margin-left: 0;
-        margin-top: 0;
-        text-align: center;
-        width: 100vw;
-    }
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
 }
 
-.animated-text {
-    opacity: 0; 
-    animation: animate-text 3s forwards; 
+.letter {
+    font-size: 15vw;
+    display: inline-block;
 }
-  
-.articles {
+
+section {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100vw;
+    background: #EEE;
+}
+
+.box {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    width: 60rem;
-    @include mixin.desktop {
-        width: 30rem;
-    }
-    @include mixin.laptop {
-        width: 95%;
-        margin-left: 20px;
-    }
-    @include mixin.mobile {
-        width: 100vw;
-        margin-left: 0px;
-    }
-    li {
-        margin-left: 22px;
-        opacity: 0;
-        transform: translateX(-20px);
-        animation: appear 0.5s ease-in-out forwards;
-    }
-    ul {
-        padding: 0;
-    }
-    
-    ul li:nth-child(1) {
-    animation-delay: 0s;
-    }
-    ul li:nth-child(2) {
-        animation-delay: 0.1s;
-    }
-    ul li:nth-child(3) {
-        animation-delay: 0.2s;
-    }
-    ul li:nth-child(4) {
-        animation-delay: 0.3s;
-    }
-    ul li:nth-child(5) {
-        animation-delay: 0.4s;
-    }
-    ul li:nth-child(6) {
-        animation-delay: 0.5s;
-    }
-    ul li:nth-child(7) {
-        animation-delay: 0.6s;
-    }
-}
-
-.rows-container {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    padding-top: 70px;
-    @include mixin.laptop {
-        flex-direction: column;
-    }
-}
-
-.block-color {
-    background-color: settings.$color-3;
-    padding: 3px 15px 20px 15px;
-    margin-bottom: 15px;
-    box-shadow: 5px 5px 2px settings.$color-2;
-    @include mixin.mobile {
-        box-shadow: none;
-    }
-}
-
-.experiences_ext {
-    margin-bottom: 6rem;
-    @include mixin.tablet {
-        margin-bottom: 15px;
-    }
+    justify-content: center;
+    text-align: center;
+    min-height: 100vh;
+    font-size: 10vw;
+    border-bottom: 1px solid #666;
 }
