Finalisation du corps de l'animation via le scroll

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,5 +1,12 @@
 @use "../settings";
 
+.picture {
+    justify-content: flex-start;
+    img {
+        
+    }
+}
+
 .title {
     display: flex;
     align-items: center;
